--- a/AzureVaultForDevelopers/FilePortal.Web/appsettings.json
+++ b/AzureVaultForDevelopers/FilePortal.Web/appsettings.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "PotalAppDBConnectionString": ""
+    "PotalAppDBConnectionString": "Server=tcp:portalapp.database.windows.net,1433;Initial Catalog=portalapp;Persist Security Info=False;User ID=portalapp;Password=Admin@2022;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "StorageConfig": {
     "ConnectionString": "",
-    "ContainerName": "portalfiles"
+    "ContainerName": ""
   },
   "KeyVault": {
     "TenantId": "",
