--- a/AzureVaultForDevelopers/FilePortal.Web/appsettings.json
+++ b/AzureVaultForDevelopers/FilePortal.Web/appsettings.json
@@ -7,10 +7,10 @@
     "ContainerName": "portalapp"
   },
   "KeyVault": {
-    "TenantId": "",
-    "ClientId": "",
-    "ClientSecret": "",
-    "Endpoint": ""
+    "TenantId": "c632aa72-4ab9-485e-a0bd-2b8004cefd74",
+    "ClientId": "0a566e7b-df96-45f0-96f4-06710529522e",
+    "ClientSecret": "9se8Q~bUWFPXJwiSNmw61ksKDodV78OoycStnc5B",
+    "Endpoint": "https://keyvaultcoursevault.vault.azure.net"
   },
   "Logging": {
     "LogLevel": {
