--- a/AzureVaultForDevelopers/FilePortal.SecureVault/FilePortal.SecureVault.csproj
+++ b/AzureVaultForDevelopers/FilePortal.SecureVault/FilePortal.SecureVault.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Azure.Security.KeyVault.Certificates" Version="4.3.0" />
     <PackageReference Include="Azure.Security.KeyVault.Keys" Version="4.3.0" />
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.3.0" />
+    <PackageReference Include="Azure.Storage.Common" Version="12.12.0" />
     <PackageReference Include="Microsoft.Azure.KeyVault.Extensions" Version="3.0.5" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.46.0" />
